# API_Utilizando_TDD

./: .gitignore  Outras_Observacoes.md  README.md  pyproject.toml
store/: main.py
store/controllers/: insurance.py  retirement.py
store/core/: config.py  database.py
store/models/: insurance.py  retirement.py
store/routers/: __init__.py
